fix add bug